--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
+GOOGLE_APPLICATION_CREDENTIALS = E:\chatbot\AI_Copilot\gcp_credentials.json
 MYSQL_HOST=localhost
 MYSQL_DATABASE=ng_app
 MYSQL_USER=root
-MYSQL_PASSWORD=root
-QDRANT_URL=https://779850f3-6c66-476c-98ed-14ca81e2209b.us-east4-0.gcp.cloud.qdrant.io:6333
-QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.zqUaT8MfDlx2C5zDV4N0bNPfWpm496WMlfkzCcFEfPA
-GOOGLE_APPLICATION_CREDENTIALS = E:\chatbot\AI_Copilot\gcp_credentials.json
-TF_ENABLE_ONEDNN_OPTS=0
+MYSQL_PASSWORD=Harish1234
+QDRANT_URL=https://8ee4f1c8-15e3-4bd1-9ea4-326109e78f9f.us-east4-0.gcp.cloud.qdrant.io:6333
+QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.zG1XspRYpHWiBFeWmjl8MhN1IsAjIbabE-oClqKo57U
+QDRANT_LOCAL_URL=http://localhost:6333
+TF_ENABLE_ONEDNN_OPTS=
+GEMINI_API_KEY = AIzaSyDhgopVip3JtaG3ytNJGRlqi1dmxn1xbvQ
