--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ MYSQL_PASSWORD=Harish1234
 QDRANT_URL=https://8ee4f1c8-15e3-4bd1-9ea4-326109e78f9f.us-east4-0.gcp.cloud.qdrant.io:6333
 QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.zG1XspRYpHWiBFeWmjl8MhN1IsAjIbabE-oClqKo57U
 QDRANT_LOCAL_URL=http://localhost:6333
-TF_ENABLE_ONEDNN_OPTS=
+TF_ENABLE_ONEDNN_OPTS=0
 GEMINI_API_KEY = AIzaSyDhgopVip3JtaG3ytNJGRlqi1dmxn1xbvQ
